tests/analyzer/errors/match.ray
fn main() {
    let a: int = match "Tom" {
        "Tom" => 4.5
        else => 1
    }

    let b: int = match "Tom" {
        "Tom" => 5
        else => print "yes"
    }

    let u: int|float = 1
    match u {

    }

    let b: int|float = match 3 {
        1 => true
        else => 2.5
    }

    match 1 {
        int => true
        else => 2.5
    }

     let t = match 1 {
        1 => print "oui"
        else => print "non"
    }
}
